--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,7 @@ library(kableExtra)
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of AstrosCheating is to ...
+The goal of AstrosCheating is to give insight into the Houston Astros 2017 cheating scandal by providing data and sample analysis regarding the situtation.
 
 ## Installation
 
